# jpiconverter

./: .gitignore  JPI-V1-Template.csv  LICENSE  README.md  pyproject.toml  vercel.json
api/: index.py
src/jpiconverter/: cli.py  decode.py  flysto.py  geo.py
src/jpiconverter/parser/: ATTRIBUTION.md  edm.py
src/jpiconverter/web/: app.py
src/jpiconverter/web/templates/: index.html
tests/: test_decode.py  test_flysto.py  test_geo.py
tests/fixtures/: U260220.JPI
