[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jpiconverter"
version = "0.1.0"
description = "Convert J.P. Instruments EDM .JPI engine-monitor files to FlySto.net-compatible CSV."
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
jpi2csv = "jpiconverter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jpiconverter = ["web/templates/*.html", "web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
